Fix a small issue